--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <h1>📰 Notícias sobre Furtos e Prevenção de Perdas</h1>
+
+  <h2>🌐 Notícias Gerais (GNews)</h2>
   <div id="noticias">Carregando notícias...</div>
+
+  <h2>🏪 Notícias da Abrappe</h2>
+  <div id="noticias-abrappe">Carregando notícias da Abrappe...</div>
 
   <script src="script.js"></script>
 </body>
