--- a/index.html
+++ b/index.html
@@ -4,37 +4,48 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Relatório de Perdas - Furtos por Produto e Loja</title>
+
+<!-- Google Fonts: Inter -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+
 <style>
-  /* Reset básico */
-  * {
+  /* Reset e base */
+  *, *::before, *::after {
     box-sizing: border-box;
   }
   body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #f0f4f8;
-    margin: 0;
-    padding: 20px;
+    margin: 0; padding: 0;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #f8fafc;
     color: #333;
+    line-height: 1.6;
   }
   h1, h2, h3 {
-    color: #1a2a6c;
-    margin-bottom: 10px;
+    color: #1e40af; /* azul forte */
+    margin-bottom: 1rem;
   }
   h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    font-weight: 700;
     text-align: center;
-    margin-bottom: 30px;
+    margin: 2rem 1rem 3rem;
   }
   section {
-    background: white;
-    padding: 20px 30px;
-    margin-bottom: 30px;
-    border-radius: 10px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    background: #fff;
+    border-radius: 12px;
+    padding: 2rem 2.5rem;
+    margin: 1rem auto 2rem;
+    max-width: 960px;
+    box-shadow: 0 10px 20px rgb(30 64 175 / 0.1);
+    transition: box-shadow 0.3s ease;
+  }
+  section:hover {
+    box-shadow: 0 12px 24px rgb(30 64 175 / 0.15);
   }
   article {
-    border-bottom: 1px solid #ddd;
-    padding: 10px 0;
+    border-bottom: 1px solid #e2e8f0;
+    padding: 0.8rem 0;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
@@ -42,98 +53,135 @@
     border-bottom: none;
   }
   article:hover {
-    background-color: #e8f0fe;
+    background-color: #e0e7ff;
   }
   article h3 {
-    margin: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 600;
+    font-size: 1.15rem;
+    margin: 0;
   }
   article h3 span {
-    font-size: 0.9rem;
-    color: #555;
+    color: #64748b; /* cinza-azulado */
+    font-weight: 600;
   }
   .detalhes {
-    margin-top: 10px;
+    margin-top: 0.75rem;
+    color: #475569;
+    font-size: 1rem;
     display: none;
-    color: #444;
-    font-size: 0.95rem;
+    line-height: 1.4;
   }
   .valor-alto {
-    color: #e74c3c;
+    color: #dc2626; /* vermelho */
     font-weight: 700;
   }
   .valor-baixo {
-    color: #27ae60;
+    color: #16a34a; /* verde */
     font-weight: 700;
   }
   .nota {
     font-style: italic;
-    color: #666;
+    color: #64748b;
+    margin-top: 0.3rem;
   }
   table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 15px;
+    margin-top: 1rem;
   }
   th, td {
-    padding: 12px 15px;
-    border: 1px solid #ccc;
+    padding: 0.75rem 1rem;
+    border: 1px solid #cbd5e1;
+    text-align: left;
   }
   th {
-    background-color: #1a2a6c;
+    background-color: #1e40af;
     color: white;
-    text-align: left;
+    font-weight: 600;
   }
   /* Botões */
   .btn {
-    background-color: #1a2a6c;
+    background-color: #1e40af;
     color: white;
     border: none;
-    padding: 10px 18px;
-    border-radius: 6px;
+    padding: 0.7rem 1.3rem;
+    border-radius: 8px;
     font-size: 1rem;
     cursor: pointer;
-    margin: 5px 5px 15px 0;
-    transition: background-color 0.3s ease;
+    margin: 0.25rem 0.5rem 1.25rem 0;
+    box-shadow: 0 4px 10px rgb(30 64 175 / 0.2);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    user-select: none;
   }
   .btn:hover {
-    background-color: #274b9f;
+    background-color: #4338ca;
+    box-shadow: 0 6px 15px rgb(67 56 202 / 0.4);
   }
   /* Filtro */
   #filtro-container {
-    margin-bottom: 20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 12px;
     align-items: center;
+    margin-bottom: 1.5rem;
+  }
+  #filtro-container label {
+    font-weight: 600;
+    color: #334155;
   }
   #filtro-valor {
-    padding: 8px 10px;
+    padding: 0.5rem 0.75rem;
     font-size: 1rem;
-    border: 1px solid #ccc;
     border-radius: 6px;
-    width: 180px;
+    border: 1px solid #cbd5e1;
+    width: 150px;
+    transition: border-color 0.3s ease;
   }
-  /* Ícone toggle */
+  #filtro-valor:focus {
+    outline: none;
+    border-color: #1e40af;
+    box-shadow: 0 0 5px #1e40af;
+  }
+  /* Ícones toggle */
   .toggle-icon {
-    font-weight: 900;
-    font-size: 1.3rem;
-    color: #1a2a6c;
+    width: 20px;
+    height: 20px;
+    fill: #1e40af;
     transition: transform 0.3s ease;
-    margin-left: 10px;
+    user-select: none;
   }
   .expanded .toggle-icon {
     transform: rotate(90deg);
   }
-  /* Responsivo */
-  @media (max-width: 600px) {
-    body {
-      padding: 10px;
-    }
+  /* Responsividade */
+  @media (max-width: 768px) {
     section {
-      padding: 15px 20px;
+      padding: 1.5rem 1.8rem;
+      margin: 1rem;
+    }
+    h1 {
+      font-size: 2rem;
+      margin: 1.5rem 1rem 2rem;
+    }
+    #filtro-container {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    #filtro-valor {
+      width: 100%;
+      max-width: 300px;
+    }
+  }
+  @media (max-width: 400px) {
+    h1 {
+      font-size: 1.5rem;
+    }
+    .btn {
+      width: 100%;
+      margin: 0.25rem 0 1rem 0;
     }
   }
 </style>
@@ -142,22 +190,24 @@
 
 <h1>📊 Relatório Geral – Furtos por Produto e Loja</h1>
 
-<section id="analise-individualizada">
+<section id="analise-individualizada" aria-label="Análise Individualizada das Perdas – 2025">
   <h2>Análise Individualizada das Perdas – 2025 (Janeiro a Maio)</h2>
+
   <div id="filtro-container">
     <label for="filtro-valor">Exibir lojas com perdas totais ≥ R$</label>
-    <input type="number" id="filtro-valor" value="0" min="0" step="0.01" />
-    <button class="btn" id="btn-aplicar-filtro">Aplicar filtro</button>
-    <button class="btn" id="btn-expandir-tudo">Expandir tudo</button>
-    <button class="btn" id="btn-recolher-tudo">Recolher tudo</button>
+    <input type="number" id="filtro-valor" value="0" min="0" step="0.01" aria-describedby="filtro-valor-desc" />
+    <span id="filtro-valor-desc" class="sr-only">Digite o valor mínimo para filtrar lojas</span>
+    <button class="btn" id="btn-aplicar-filtro" aria-label="Aplicar filtro">Aplicar filtro</button>
+    <button class="btn" id="btn-expandir-tudo" aria-label="Expandir todas as lojas">Expandir tudo</button>
+    <button class="btn" id="btn-recolher-tudo" aria-label="Recolher todas as lojas">Recolher tudo</button>
   </div>
 
-  <div id="lojas-container">
-    <!-- Cada loja como article com toggle -->
+  <div id="lojas-container" role="list" aria-live="polite">
+    <!-- Lojas serão inseridas aqui via JS -->
   </div>
 </section>
 
-<section id="ranking">
+<section id="ranking" aria-label="Ranking de Perdas por Loja">
   <h2>Ranking de Perdas por Loja (Jan-Mai/2025)</h2>
   <table>
     <thead>
@@ -181,7 +231,7 @@
   </table>
 </section>
 
-<section id="analise-geral">
+<section id="analise-geral" aria-label="Análise Geral">
   <h2>Análise Geral (Jan-Mai/2025)</h2>
   <p><strong>Total Geral de Perdas (todas as lojas):</strong> 10.218,87 Brt</p>
   <p><strong>Média Geral Mensal (por loja):</strong> 255,47 Brt</p>
@@ -199,168 +249,61 @@
 </section>
 
 <script>
-  // Dados das lojas com perdas para criar dinamicamente os artigos
+  // Dados das lojas com perdas
   const lojas = [
-    {
-      nome: "Loja 09",
-      valores: {
-        Janeiro: 467.50,
-        Fevereiro: 423.99,
-        Março: 444.17,
-        Abril: 558.86,
-        Maio: 414.55
-      },
-      total: 2309.07,
-      media: 461.81,
-      nota: "Abril teve o maior valor registrado de perdas.",
-      destaque: "abril"
-    },
-    {
-      nome: "Loja 10",
-      valores: {
-        Janeiro: 18.73,
-        Fevereiro: 47.21,
-        Março: 48.43,
-        Abril: 28.70,
-        Maio: 22.25
-      },
-      total: 165.32,
-      media: 33.06,
-      nota: "Loja com menor volume total de perdas.",
-      destaque: "menor"
-    },
-    {
-      nome: "Loja 11",
-      valores: {
-        Janeiro: 530.52,
-        Fevereiro: 352.60,
-        Março: 721.69,
-        Abril: 358.22,
-        Maio: 621.39
-      },
-      total: 2584.42,
-      media: 516.88,
-      nota: "Destaque: Maior perda total e maior valor em um único mês (março).",
-      destaque: "marco"
-    },
-    {
-      nome: "Loja 25",
-      valores: {
-        Janeiro: 59.96,
-        Fevereiro: 108.17,
-        Março: 154.24,
-        Abril: 234.07,
-        Maio: 228.13
-      },
-      total: 784.57,
-      media: 156.91,
-      nota: "",
-      destaque: "abril"
-    },
-    {
-      nome: "Loja 28",
-      valores: {
-        Janeiro: 96.78,
-        Fevereiro: 131.81,
-        Março: 324.99,
-        Abril: 295.77,
-        Maio: 42.98
-      },
-      total: 892.33,
-      media: 178.47,
-      nota: "",
-      destaque: "marco"
-    },
-    {
-      nome: "Loja 36",
-      valores: {
-        Janeiro: 175.85,
-        Fevereiro: 116.23,
-        Março: 246.21,
-        Abril: 195.54,
-        Maio: 189.96
-      },
-      total: 923.79,
-      media: 184.76,
-      nota: "",
-      destaque: "marco"
-    },
-    {
-      nome: "Loja 48",
-      valores: {
-        Janeiro: 340.18,
-        Fevereiro: 326.20,
-        Março: 754.34,
-        Abril: 210.11,
-        Maio: 195.32
-      },
-      total: 1826.15,
-      media: 365.23,
-      nota: "Março: maior valor de perdas entre todas as lojas.",
-      destaque: "marco"
-    },
-    {
-      nome: "Loja 53",
-      valores: {
-        Janeiro: 281.04,
-        Fevereiro: 63.68,
-        Março: 138.35,
-        Abril: 110.77,
-        Maio: 139.38
-      },
-      total: 733.22,
-      media: 146.64,
-      nota: "",
-      destaque: "janeiro"
-    }
+    { nome: "Loja 09", valores: { Janeiro: 467.50, Fevereiro: 423.99, Março: 444.17, Abril: 558.86, Maio: 414.55 }, total: 2309.07, media: 461.81, nota: "Abril teve o maior valor registrado de perdas.", destaque: "Abril" },
+    { nome: "Loja 10", valores: { Janeiro: 18.73, Fevereiro: 47.21, Março: 48.43, Abril: 28.70, Maio: 22.25 }, total: 165.32, media: 33.06, nota: "Loja com menor volume total de perdas.", destaque: null },
+    { nome: "Loja 11", valores: { Janeiro: 530.52, Fevereiro: 352.60, Março: 721.69, Abril: 358.22, Maio: 621.39 }, total: 2584.42, media: 516.88, nota: "Destaque: Maior perda total e maior valor em um único mês (março).", destaque: "Março" },
+    { nome: "Loja 25", valores: { Janeiro: 59.96, Fevereiro: 108.17, Março: 154.24, Abril: 234.07, Maio: 228.13 }, total: 784.57, media: 156.91, nota: "", destaque: "Abril" },
+    { nome: "Loja 28", valores: { Janeiro: 96.78, Fevereiro: 131.81, Março: 324.99, Abril: 295.77, Maio: 42.98 }, total: 892.33, media: 178.47, nota: "", destaque: "Março" },
+    { nome: "Loja 36", valores: { Janeiro: 175.85, Fevereiro: 116.23, Março: 246.21, Abril: 195.54, Maio: 189.96 }, total: 923.79, media: 184.76, nota: "", destaque: "Março" },
+    { nome: "Loja 48", valores: { Janeiro: 340.18, Fevereiro: 326.20, Março: 754.34, Abril: 210.11, Maio: 195.32 }, total: 1826.15, media: 365.23, nota: "Março: maior valor de perdas entre todas as lojas.", destaque: "Março" },
+    { nome: "Loja 53", valores: { Janeiro: 281.04, Fevereiro: 63.68, Março: 138.35, Abril: 110.77, Maio: 139.38 }, total: 733.22, media: 146.64, nota: "", destaque: "Janeiro" }
   ];
 
   const container = document.getElementById("lojas-container");
 
-  // Função para formatar número como moeda brasileira
   function formatarValor(valor) {
     return valor.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
   }
 
-  // Cria o HTML dos detalhes de cada loja
   function criarDetalhes(loja) {
     let html = `<div class="detalhes">`;
     for (const [mes, valor] of Object.entries(loja.valores)) {
-      let destaque = "";
-      if (
-        (loja.destaque === "abril" && mes === "Abril") ||
-        (loja.destaque === "marco" && mes === "Março") ||
-        (loja.destaque === "janeiro" && mes === "Janeiro") ||
-        (loja.destaque === "menor" && loja.media === Math.min(...lojas.map(l => l.media)))
-      ) {
-        destaque = 'valor-alto';
-      }
+      const destaque = (loja.destaque && mes.toLowerCase() === loja.destaque.toLowerCase()) ? "valor-alto" : "";
       html += `<p>${mes}: <span class="${destaque}">${formatarValor(valor)} Brt${destaque ? " 🔺" : ""}</span></p>`;
     }
     html += `<p><strong>Total:</strong> ${formatarValor(loja.total)} Brt</p>`;
     html += `<p><strong>Média Mensal:</strong> ${formatarValor(loja.media)} Brt</p>`;
-    if(loja.nota) html += `<p class="nota">${loja.nota}</p>`;
+    if (loja.nota) html += `<p class="nota">${loja.nota}</p>`;
     html += `</div>`;
     return html;
   }
 
-  // Monta artigos das lojas
+  function criarIconeToggle() {
+    return `
+      <svg class="toggle-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M8 5v14l11-7z" />
+      </svg>
+    `;
+  }
+
   function montarArtigos(lojasFiltradas) {
     container.innerHTML = "";
     lojasFiltradas.forEach(loja => {
       const artigo = document.createElement("article");
       artigo.innerHTML = `
-        <h3>${loja.nome} <span class="toggle-icon">▶</span></h3>
+        <h3>${loja.nome} ${criarIconeToggle()}</h3>
         ${criarDetalhes(loja)}
       `;
       container.appendChild(artigo);
     });
 
-    // Adiciona evento para toggle detalhes
     document.querySelectorAll("#lojas-container article h3").forEach(header => {
       header.addEventListener("click", () => {
         const detalhes = header.nextElementSibling;
         const article = header.parentElement;
+        const icon = header.querySelector(".toggle-icon");
         if (detalhes.style.display === "block") {
           detalhes.style.display = "none";
           article.classList.remove("expanded");
@@ -374,7 +317,6 @@
 
   montarArtigos(lojas);
 
-  // Botões expandir/recolher tudo
   document.getElementById("btn-expandir-tudo").addEventListener("click", () => {
     document.querySelectorAll("#lojas-container article .detalhes").forEach(d => d.style.display = "block");
     document.querySelectorAll("#lojas-container article").forEach(a => a.classList.add("expanded"));
@@ -385,7 +327,6 @@
     document.querySelectorAll("#lojas-container article").forEach(a => a.classList.remove("expanded"));
   });
 
-  // Filtro por valor total mínimo
   document.getElementById("btn-aplicar-filtro").addEventListener("click", () => {
     const valorFiltro = parseFloat(document.getElementById("filtro-valor").value) || 0;
     const filtradas = lojas.filter(l => l.total >= valorFiltro);
