--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Monitor de Notícias e Relatórios - Perdas no Varejo</title>
+<title>Monitor de Notícias e Relatórios - Gestão de Perdas - Lojas do Vale</title>
 
 <!-- Fonte Inter -->
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
