--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </head>
 <body>
 
-<h1>📰 Monitor de Notícias e Relatórios - Perdas no Varejo</h1>
+<h1>📰 Monitor de Notícias e Relatórios -  Gestão de Perdas - Lojas do Vale</h1>
 
 <div class="container" role="main">
 
