Adiciona layout profissional: hero, projetos em destaque e case study Loja 11

--- a/index.html
+++ b/index.html
@@ -149,7 +149,29 @@
 </head>
 <body>
 
-<h1>📰 Monitor de Notícias e Relatórios -  Gestão de Perdas - Lojas do Vale</h1>
+<h1>Daniel — Monitor de Notícias & Gestão de Perdas</h1>
+
+<header class="hero">
+  <div class="hero-inner container">
+    <div>
+      <h2 class="hero-title">Transformando dados de perdas em decisões operacionais</h2>
+      <p class="hero-lead">Dashboard e relatórios focados em redução de perdas, análise de inventário e monitoramento de ocorrências — projetos, automações e integrações.</p>
+      <p class="hero-ctas">
+        <a class="btn primary" href="#projetos">Ver projetos</a>
+        <a class="btn ghost" href="/kobaiadev.github.io/projects/loja-11.html">Case: Loja 11</a>
+      </p>
+    </div>
+    <div class="hero-visual">
+      <!-- Placeholder visual -->
+      <svg width="240" height="140" viewBox="0 0 240 140" aria-hidden="true">
+        <rect x="0" y="0" width="240" height="140" rx="8" fill="#eef2ff"></rect>
+        <rect x="12" y="18" width="150" height="14" rx="4" fill="#e0e7ff"></rect>
+        <rect x="12" y="40" width="100" height="10" rx="4" fill="#e6eefb"></rect>
+        <rect x="12" y="60" width="200" height="50" rx="6" fill="#fff"></rect>
+      </svg>
+    </div>
+  </div>
+</header>
 
 <div class="container" role="main">
 
@@ -178,6 +200,14 @@
 
     <div id="analiseContent">
       <!-- Conteúdo da Análise será gerado via JS -->
+    </div>
+  </section>
+
+  <!-- Projetos destacados -->
+  <section id="projetos" class="tab-content active" aria-live="polite" style="margin-top:1.25rem;">
+    <h2 style="color:#1e40af; margin-bottom:0.5rem;">Projetos Destacados</h2>
+    <div id="projects" class="noticias-grid">
+      <!-- Cards gerados via JS -->
     </div>
   </section>
 
